# Bookstore

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  github-actions-demo.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order.py  test_order_serializert.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/serializers/: product_serializer.py
product/tests/test_serializers/: test_product.py  test_product_serializers.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
