[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "BookStore APP"
authors = ["CapyvaraPaulista <victorbonini.vb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.2"
django-rest-framework = "^0.1.0"
factory-boy = "^3.3.3"
pytest = "^9.0.2"
django-extensions = "^4.1"
django-debug-toolbar = "^6.2.0"
psycopg2-binary = "^2.9.11"
flake8 = "^7.3.0"
gitpython = "^3.1.50"
whitenoise = "^6.12.0"
gunicorn = "^26.0.0"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
